<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<!-- This is a ROS package file, intended to allow this library to be built
     side-by-side to ROS packages in a catkin/ament environment.
-->
<package format="3">
  <name>mp2p_icp</name>
  <version>1.5.4</version>
  <description>A repertory of multi primitive-to-primitive (MP2P) ICP algorithms in C++</description>

  <maintainer email="joseluisblancoc@gmail.com">Jose-Luis Blanco-Claraco</maintainer>
  <license file="COPYING">BSD</license>

  <url type="website">https://github.com/MOLAorg/mp2p_icp</url>


  <!-- Deps required by user code (they are in public headers or built as ROS (vs system) packages -->
  <depend>mola_common</depend>

  <depend>mrpt_libbase</depend>
  <depend>mrpt_libobs</depend>
  <depend>mrpt_libposes</depend>
  <depend>mrpt_libmaps</depend>
  <depend>mrpt_libgui</depend>
  <depend>mrpt_libtclap</depend>

  <depend>tbb</depend>  <!-- Required to exploit paralelization in many ICP algorithms -->

  <!-- optional for part of the tests -->
  <!-- depend>mola_test_datasets</depend>  -->

  <doc_depend>doxygen</doc_depend>

  <!-- Minimum entries to release non-catkin pkgs: -->
  <buildtool_depend>cmake</buildtool_depend>
  <export>
    <build_type>cmake</build_type>
  </export>
  <!-- End -->

</package>
