<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<!-- This is a ROS package file, intended to allow this library to be built
     side-by-side to ROS packages in a catkin/ament environment.
-->
<package format="3">
  <name>mp2p_icp</name>
  <version>1.6.1</version>
  <description>A repertory of multi primitive-to-primitive (MP2P) ICP algorithms in C++</description>

  <maintainer email="joseluisblancoc@gmail.com">Jose-Luis Blanco-Claraco</maintainer>
  <license file="COPYING">BSD</license>

  <url type="website">https://github.com/MOLAorg/mp2p_icp</url>

  <!-- COMMON DEPS -->
  <build_depend>ros_environment</build_depend>  <!-- Required for ROS_VERSION -->

  <buildtool_depend>cmake</buildtool_depend>
  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>
  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake</buildtool_depend>

  <!-- Deps required by user code (they are in public headers or built as ROS (vs system) packages -->
  <depend>mola_common</depend>

  <depend>mrpt_libbase</depend>
  <depend>mrpt_libobs</depend>
  <depend>mrpt_libposes</depend>
  <depend>mrpt_libmaps</depend>
  <depend>mrpt_libgui</depend>
  <depend>mrpt_libtclap</depend>

  <depend>tbb</depend>  <!-- Required to exploit paralelization in many ICP algorithms -->

  <!-- optional for part of the tests -->
  <!-- depend>mola_test_datasets</depend>  -->

  <test_depend condition="$ROS_VERSION == 1">catkin</test_depend>

  <doc_depend>doxygen</doc_depend>

  <export>
    <!-- We need catkin installed during builds so debian/rules finds /opt/*/setup.bash -->
    <build_type condition="$ROS_VERSION == 1">catkin</build_type>
    <build_type condition="$ROS_VERSION == 2">cmake</build_type>
  </export>
  <!-- End -->

</package>
