# Apps:
add_subdirectory(icp-log-viewer)
add_subdirectory(icp-run)
add_subdirectory(kitti2mm)
add_subdirectory(mm-filter)
add_subdirectory(mm-georef)
add_subdirectory(mm-info)
add_subdirectory(mm-viewer)
add_subdirectory(mm2txt)
add_subdirectory(rawlog-filter)
add_subdirectory(sm-cli)
add_subdirectory(sm2mm)
add_subdirectory(txt2mm)
